docs/generated/2.0.1/Index.md
Index
=====

## A

- [`Archive`](Piwik/Archive.md) &mdash; _Class in namespace_ `Piwik` 
- [`ArchiveProcessor`](Piwik/ArchiveProcessor.md) &mdash; _Class in namespace_ `Piwik` 
- [`aggregateDataTableRecords()`](Piwik/ArchiveProcessor.md#aggregatedatatablerecords) &mdash; _Method in class_ [`ArchiveProcessor`](Piwik/ArchiveProcessor.md)
- [`aggregateNumericMetrics()`](Piwik/ArchiveProcessor.md#aggregatenumericmetrics) &mdash; _Method in class_ [`ArchiveProcessor`](Piwik/ArchiveProcessor.md)
- [`applyQueuedFilters()`](Piwik/DataTable.md#applyqueuedfilters) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`addDataTable()`](Piwik/DataTable.md#adddatatable) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`addRow()`](Piwik/DataTable.md#addrow) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`addSummaryRow()`](Piwik/DataTable.md#addsummaryrow) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`addRowFromArray()`](Piwik/DataTable.md#addrowfromarray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`addRowFromSimpleArray()`](Piwik/DataTable.md#addrowfromsimplearray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`addRowsFromSerializedArray()`](Piwik/DataTable.md#addrowsfromserializedarray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`addRowsFromArray()`](Piwik/DataTable.md#addrowsfromarray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`addRowsFromSimpleArray()`](Piwik/DataTable.md#addrowsfromsimplearray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`AddColumnsProcessedMetrics`](Piwik/DataTable/Filter/AddColumnsProcessedMetrics.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`AddColumnsProcessedMetricsGoal`](Piwik/DataTable/Filter/AddColumnsProcessedMetricsGoal.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`AddSummaryRow`](Piwik/DataTable/Filter/AddSummaryRow.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`appendPercentSign()`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md#appendpercentsign) &mdash; _Method in class_ [`CalculateEvolutionFilter`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md)
- [`applyQueuedFilters()`](Piwik/DataTable/Map.md#applyqueuedfilters) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`addTable()`](Piwik/DataTable/Map.md#addtable) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`addDataTable()`](Piwik/DataTable/Map.md#adddatatable) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`addSubtable()`](Piwik/DataTable/Row.md#addsubtable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`addColumn()`](Piwik/DataTable/Row.md#addcolumn) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`addColumns()`](Piwik/DataTable/Row.md#addcolumns) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`addMetadata()`](Piwik/DataTable/Row.md#addmetadata) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`addRowsFromArray()`](Piwik/DataTable/Simple.md#addrowsfromarray) &mdash; _Method in class_ [`Simple`](Piwik/DataTable/Simple.md)
- [`adjustForTimezone()`](Piwik/Date.md#adjustfortimezone) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`addDay()`](Piwik/Date.md#addday) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`addHour()`](Piwik/Date.md#addhour) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`addHourTo()`](Piwik/Date.md#addhourto) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`addPeriod()`](Piwik/Date.md#addperiod) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`add()`](Piwik/Menu/MenuAbstract.md#add) &mdash; _Method in class_ [`MenuAbstract`](Piwik/Menu/MenuAbstract.md)
- [`addEntry()`](Piwik/Menu/MenuAdmin.md#addentry) &mdash; _Method in class_ [`MenuAdmin`](Piwik/Menu/MenuAdmin.md)
- [`addEntry()`](Piwik/Menu/MenuTop.md#addentry) &mdash; _Method in class_ [`MenuTop`](Piwik/Menu/MenuTop.md)
- [`addAction()`](Piwik/Piwik.md#addaction) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`activate()`](Piwik/Plugin.md#activate) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`API`](Piwik/Plugin/API.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin) 
- [`Archiver`](Piwik/Plugin/Archiver.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin) 
- [`aggregateDayReport()`](Piwik/Plugin/Archiver.md#aggregatedayreport) &mdash; _Method in class_ [`Archiver`](Piwik/Plugin/Archiver.md)
- [`aggregateMultipleReports()`](Piwik/Plugin/Archiver.md#aggregatemultiplereports) &mdash; _Method in class_ [`Archiver`](Piwik/Plugin/Archiver.md)
- [`assignTemplateVar()`](Piwik/Plugin/Visualization.md#assigntemplatevar) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
- [`Archiver`](Piwik/Plugins/Actions/Archiver.md) &mdash; _Class in namespace_ `Piwik\Plugins\Actions` 
- [`AllColumns`](Piwik/Plugins/CoreVisualizations/Visualizations/HtmlTable/AllColumns.md) &mdash; _Class in namespace_ [`Piwik\Plugins\CoreVisualizations\Visualizations\HtmlTable`](Piwik/Plugins/CoreVisualizations/Visualizations/HtmlTable) 
- [`Archiver`](Piwik/Plugins/CustomVariables/Archiver.md) &mdash; _Class in namespace_ `Piwik\Plugins\CustomVariables` 
- [`Archiver`](Piwik/Plugins/DevicesDetection/Archiver.md) &mdash; _Class in namespace_ `Piwik\Plugins\DevicesDetection` 
- [`Archiver`](Piwik/Plugins/Goals/Archiver.md) &mdash; _Class in namespace_ `Piwik\Plugins\Goals` 
- [`Archiver`](Piwik/Plugins/Provider/Archiver.md) &mdash; _Class in namespace_ `Piwik\Plugins\Provider` 
- [`Archiver`](Piwik/Plugins/Referrers/Archiver.md) &mdash; _Class in namespace_ `Piwik\Plugins\Referrers` 
- [`Archiver`](Piwik/Plugins/UserCountry/Archiver.md) &mdash; _Class in namespace_ `Piwik\Plugins\UserCountry` 
- [`Archiver`](Piwik/Plugins/UserSettings/Archiver.md) &mdash; _Class in namespace_ `Piwik\Plugins\UserSettings` 
- [`Archiver`](Piwik/Plugins/VisitTime/Archiver.md) &mdash; _Class in namespace_ `Piwik\Plugins\VisitTime` 
- [`Archiver`](Piwik/Plugins/VisitorInterest/Archiver.md) &mdash; _Class in namespace_ `Piwik\Plugins\VisitorInterest` 
- [`addLabelColumn()`](Piwik/RankingQuery.md#addlabelcolumn) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
- [`addColumn()`](Piwik/RankingQuery.md#addcolumn) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
- [`$availableValues`](Piwik/Settings/Setting.md#$availablevalues) &mdash; _Property in class_ [`Setting`](Piwik/Settings/Setting.md)
- [`addPropertiesThatShouldBeAvailableClientSide()`](Piwik/ViewDataTable/Config.md#addpropertiesthatshouldbeavailableclientside) &mdash; _Method in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`addPropertiesThatCanBeOverwrittenByQueryParams()`](Piwik/ViewDataTable/Config.md#addpropertiesthatcanbeoverwrittenbyqueryparams) &mdash; _Method in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`addRelatedReport()`](Piwik/ViewDataTable/Config.md#addrelatedreport) &mdash; _Method in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`addRelatedReports()`](Piwik/ViewDataTable/Config.md#addrelatedreports) &mdash; _Method in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`addTranslation()`](Piwik/ViewDataTable/Config.md#addtranslation) &mdash; _Method in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`addTranslations()`](Piwik/ViewDataTable/Config.md#addtranslations) &mdash; _Method in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$apiMethodToRequestDataTable`](Piwik/ViewDataTable/RequestConfig.md#$apimethodtorequestdatatable) &mdash; _Property in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)
- [`addPropertiesThatShouldBeAvailableClientSide()`](Piwik/ViewDataTable/RequestConfig.md#addpropertiesthatshouldbeavailableclientside) &mdash; _Method in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)
- [`addPropertiesThatCanBeOverwrittenByQueryParams()`](Piwik/ViewDataTable/RequestConfig.md#addpropertiesthatcanbeoverwrittenbyqueryparams) &mdash; _Method in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)
- [`areQueuedFiltersDisabled()`](Piwik/ViewDataTable/RequestConfig.md#arequeuedfiltersdisabled) &mdash; _Method in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)
- [`areGenericFiltersDisabled()`](Piwik/ViewDataTable/RequestConfig.md#aregenericfiltersdisabled) &mdash; _Method in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)
- [`add()`](Piwik/WidgetsList.md#add) &mdash; _Method in class_ [`WidgetsList`](Piwik/WidgetsList.md)

## B

- [`build()`](Piwik/Archive.md#build) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
- [`BaseFilter`](Piwik/DataTable/BaseFilter.md) &mdash; _Class in namespace_ [`Piwik\DataTable`](Piwik/DataTable) 
- [`BeautifyRangeLabels`](Piwik/DataTable/Filter/BeautifyRangeLabels.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`beautify()`](Piwik/DataTable/Filter/BeautifyRangeLabels.md#beautify) &mdash; _Method in class_ [`BeautifyRangeLabels`](Piwik/DataTable/Filter/BeautifyRangeLabels.md)
- [`BeautifyTimeRangeLabels`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`Bar`](Piwik/Plugins/CoreVisualizations/Visualizations/JqplotGraph/Bar.md) &mdash; _Class in namespace_ [`Piwik\Plugins\CoreVisualizations\Visualizations\JqplotGraph`](Piwik/Plugins/CoreVisualizations/Visualizations/JqplotGraph) 
- [`build()`](Piwik/ViewDataTable/Factory.md#build) &mdash; _Method in class_ [`Factory`](Piwik/ViewDataTable/Factory.md)

## C

- [`Common`](Piwik/Common.md) &mdash; _Class in namespace_ `Piwik` 
- [`Config`](Piwik/Config.md) &mdash; _Class in namespace_ `Piwik` 
- [`CalculateEvolutionFilter`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`calculate()`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md#calculate) &mdash; _Method in class_ [`CalculateEvolutionFilter`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md)
- [`ColumnCallbackAddColumn`](Piwik/DataTable/Filter/ColumnCallbackAddColumn.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`ColumnCallbackAddColumnPercentage`](Piwik/DataTable/Filter/ColumnCallbackAddColumnPercentage.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`ColumnCallbackAddColumnQuotient`](Piwik/DataTable/Filter/ColumnCallbackAddColumnQuotient.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`ColumnCallbackAddMetadata`](Piwik/DataTable/Filter/ColumnCallbackAddMetadata.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`ColumnCallbackDeleteRow`](Piwik/DataTable/Filter/ColumnCallbackDeleteRow.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`ColumnDelete`](Piwik/DataTable/Filter/ColumnDelete.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`$c`](Piwik/DataTable/Row.md#$c) &mdash; _Property in class_ [`Row`](Piwik/DataTable/Row.md)
- [`compareWeek()`](Piwik/Date.md#compareweek) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`compareMonth()`](Piwik/Date.md#comparemonth) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`compareYear()`](Piwik/Date.md#compareyear) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`createDatabaseObject()`](Piwik/Db.md#createdatabaseobject) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`copy()`](Piwik/Filesystem.md#copy) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
- [`copyRecursive()`](Piwik/Filesystem.md#copyrecursive) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
- [`$context`](Piwik/Notification.md#$context) &mdash; _Property in class_ [`Notification`](Piwik/Notification.md)
- [`checkUserIsSuperUserOrTheUser()`](Piwik/Piwik.md#checkuserissuperuserortheuser) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`checkUserIsNotAnonymous()`](Piwik/Piwik.md#checkuserisnotanonymous) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`checkUserIsSuperUser()`](Piwik/Piwik.md#checkuserissuperuser) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`checkUserHasAdminAccess()`](Piwik/Piwik.md#checkuserhasadminaccess) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`checkUserHasSomeAdminAccess()`](Piwik/Piwik.md#checkuserhassomeadminaccess) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`checkUserHasViewAccess()`](Piwik/Piwik.md#checkuserhasviewaccess) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`checkUserHasSomeViewAccess()`](Piwik/Piwik.md#checkuserhassomeviewaccess) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`Controller`](Piwik/Plugin/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin) 
- [`checkTokenInUrl()`](Piwik/Plugin/Controller.md#checktokeninurl) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`$config`](Piwik/Plugin/ViewDataTable.md#$config) &mdash; _Property in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`canDisplayViewDataTable()`](Piwik/Plugin/ViewDataTable.md#candisplayviewdatatable) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`Cloud`](Piwik/Plugins/CoreVisualizations/Visualizations/Cloud.md) &mdash; _Class in namespace_ `Piwik\Plugins\CoreVisualizations\Visualizations` 
- [`$config`](Piwik/Plugins/CoreVisualizations/Visualizations/Cloud.md#$config) &mdash; _Property in class_ [`Cloud`](Piwik/Plugins/CoreVisualizations/Visualizations/Cloud.md)
- [`$config`](Piwik/Plugins/CoreVisualizations/Visualizations/Graph.md#$config) &mdash; _Property in class_ [`Graph`](Piwik/Plugins/CoreVisualizations/Visualizations/Graph.md)
- [`$config`](Piwik/Plugins/CoreVisualizations/Visualizations/HtmlTable.md#$config) &mdash; _Property in class_ [`HtmlTable`](Piwik/Plugins/CoreVisualizations/Visualizations/HtmlTable.md)
- [`$config`](Piwik/Plugins/CoreVisualizations/Visualizations/JqplotGraph.md#$config) &mdash; _Property in class_ [`JqplotGraph`](Piwik/Plugins/CoreVisualizations/Visualizations/JqplotGraph.md)
- [`$config`](Piwik/Plugins/CoreVisualizations/Visualizations/JqplotGraph/Evolution.md#$config) &mdash; _Property in class_ [`Evolution`](Piwik/Plugins/CoreVisualizations/Visualizations/JqplotGraph/Evolution.md)
- [`canBeDisplayedForCurrentUser()`](Piwik/Settings/Setting.md#canbedisplayedforcurrentuser) &mdash; _Method in class_ [`Setting`](Piwik/Settings/Setting.md)
- [`clearCache()`](Piwik/Site.md#clearcache) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`Config`](Piwik/ViewDataTable/Config.md) &mdash; _Class in namespace_ `Piwik\ViewDataTable` 
- [`$clientSideProperties`](Piwik/ViewDataTable/Config.md#$clientsideproperties) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$columns_to_display`](Piwik/ViewDataTable/Config.md#$columns_to_display) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$custom_parameters`](Piwik/ViewDataTable/Config.md#$custom_parameters) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$controllerName`](Piwik/ViewDataTable/Config.md#$controllername) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$controllerAction`](Piwik/ViewDataTable/Config.md#$controlleraction) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$clientSideParameters`](Piwik/ViewDataTable/RequestConfig.md#$clientsideparameters) &mdash; _Property in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)

## D

- [`destroy()`](Piwik/Common.md#destroy) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`DataTable`](Piwik/DataTable.md) &mdash; _Class in namespace_ `Piwik` 
- [`deleteColumn()`](Piwik/DataTable.md#deletecolumn) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`deleteColumns()`](Piwik/DataTable.md#deletecolumns) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`deleteRow()`](Piwik/DataTable.md#deleterow) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`deleteRowsOffset()`](Piwik/DataTable.md#deleterowsoffset) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`deleteRows()`](Piwik/DataTable.md#deleterows) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`deleteColumns()`](Piwik/DataTable/Map.md#deletecolumns) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`deleteRow()`](Piwik/DataTable/Map.md#deleterow) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`deleteColumn()`](Piwik/DataTable/Map.md#deletecolumn) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`deleteColumn()`](Piwik/DataTable/Row.md#deletecolumn) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`deleteMetadata()`](Piwik/DataTable/Row.md#deletemetadata) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`Date`](Piwik/Date.md) &mdash; _Class in namespace_ `Piwik` 
- [`Db`](Piwik/Db.md) &mdash; _Class in namespace_ `Piwik` 
- [`deleteAllRows()`](Piwik/Db.md#deleteallrows) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`dropTables()`](Piwik/Db.md#droptables) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`dispatch()`](Piwik/FrontController.md#dispatch) &mdash; _Method in class_ [`FrontController`](Piwik/FrontController.md)
- [`downloadChunk()`](Piwik/Http.md#downloadchunk) &mdash; _Method in class_ [`Http`](Piwik/Http.md)
- [`debug()`](Piwik/Log.md#debug) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
- [`discardNonce()`](Piwik/Nonce.md#discardnonce) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
- [`delete()`](Piwik/Option.md#delete) &mdash; _Method in class_ [`Option`](Piwik/Option.md)
- [`deleteLike()`](Piwik/Option.md#deletelike) &mdash; _Method in class_ [`Option`](Piwik/Option.md)
- [`deactivate()`](Piwik/Plugin.md#deactivate) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`$date`](Piwik/Plugin/Controller.md#$date) &mdash; _Property in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`Daily`](Piwik/ScheduledTime/Daily.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime) 
- [`$description`](Piwik/Settings/Setting.md#$description) &mdash; _Property in class_ [`Setting`](Piwik/Settings/Setting.md)
- [`$defaultValue`](Piwik/Settings/Setting.md#$defaultvalue) &mdash; _Property in class_ [`Setting`](Piwik/Settings/Setting.md)
- [`$documentation`](Piwik/ViewDataTable/Config.md#$documentation) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$datatable_css_class`](Piwik/ViewDataTable/Config.md#$datatable_css_class) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$datatable_js_type`](Piwik/ViewDataTable/Config.md#$datatable_js_type) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$disable_generic_filters`](Piwik/ViewDataTable/RequestConfig.md#$disable_generic_filters) &mdash; _Property in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)
- [`$disable_queued_filters`](Piwik/ViewDataTable/RequestConfig.md#$disable_queued_filters) &mdash; _Property in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)

## E

- [`enableRecursiveSort()`](Piwik/DataTable.md#enablerecursivesort) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`enableRecursiveFilters()`](Piwik/DataTable.md#enablerecursivefilters) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`enableRecursive()`](Piwik/DataTable/BaseFilter.md#enablerecursive) &mdash; _Method in class_ [`BaseFilter`](Piwik/DataTable/BaseFilter.md)
- [`ExcludeLowPopulation`](Piwik/DataTable/Filter/ExcludeLowPopulation.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`enableRecursiveSort()`](Piwik/DataTable/Map.md#enablerecursivesort) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`exec()`](Piwik/Db.md#exec) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`error()`](Piwik/Log.md#error) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
- [`Evolution`](Piwik/Plugins/CoreVisualizations/Visualizations/JqplotGraph/Evolution.md) &mdash; _Class in namespace_ [`Piwik\Plugins\CoreVisualizations\Visualizations\JqplotGraph`](Piwik/Plugins/CoreVisualizations/Visualizations/JqplotGraph) 
- [`execute()`](Piwik/RankingQuery.md#execute) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
- [`$enable_sort`](Piwik/ViewDataTable/Config.md#$enable_sort) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$export_limit`](Piwik/ViewDataTable/Config.md#$export_limit) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)

## F

- [`factory()`](Piwik/Archive.md#factory) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
- [`forceSave()`](Piwik/Config.md#forcesave) &mdash; _Method in class_ [`Config`](Piwik/Config.md)
- [`filter()`](Piwik/DataTable.md#filter) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`fromSerializedArray()`](Piwik/DataTable.md#fromserializedarray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`filter()`](Piwik/DataTable/BaseFilter.md#filter) &mdash; _Method in class_ [`BaseFilter`](Piwik/DataTable/BaseFilter.md)
- [`filterSubTable()`](Piwik/DataTable/BaseFilter.md#filtersubtable) &mdash; _Method in class_ [`BaseFilter`](Piwik/DataTable/BaseFilter.md)
- [`filter()`](Piwik/DataTable/Filter/AddColumnsProcessedMetrics.md#filter) &mdash; _Method in class_ [`AddColumnsProcessedMetrics`](Piwik/DataTable/Filter/AddColumnsProcessedMetrics.md)
- [`filter()`](Piwik/DataTable/Filter/AddColumnsProcessedMetricsGoal.md#filter) &mdash; _Method in class_ [`AddColumnsProcessedMetricsGoal`](Piwik/DataTable/Filter/AddColumnsProcessedMetricsGoal.md)
- [`filter()`](Piwik/DataTable/Filter/AddSummaryRow.md#filter) &mdash; _Method in class_ [`AddSummaryRow`](Piwik/DataTable/Filter/AddSummaryRow.md)
- [`filter()`](Piwik/DataTable/Filter/ColumnCallbackAddColumn.md#filter) &mdash; _Method in class_ [`ColumnCallbackAddColumn`](Piwik/DataTable/Filter/ColumnCallbackAddColumn.md)
- [`filter()`](Piwik/DataTable/Filter/ColumnCallbackAddColumnQuotient.md#filter) &mdash; _Method in class_ [`ColumnCallbackAddColumnQuotient`](Piwik/DataTable/Filter/ColumnCallbackAddColumnQuotient.md)
- [`filter()`](Piwik/DataTable/Filter/ColumnCallbackAddMetadata.md#filter) &mdash; _Method in class_ [`ColumnCallbackAddMetadata`](Piwik/DataTable/Filter/ColumnCallbackAddMetadata.md)
- [`filter()`](Piwik/DataTable/Filter/ColumnCallbackDeleteRow.md#filter) &mdash; _Method in class_ [`ColumnCallbackDeleteRow`](Piwik/DataTable/Filter/ColumnCallbackDeleteRow.md)
- [`filter()`](Piwik/DataTable/Filter/ColumnDelete.md#filter) &mdash; _Method in class_ [`ColumnDelete`](Piwik/DataTable/Filter/ColumnDelete.md)
- [`filter()`](Piwik/DataTable/Filter/ExcludeLowPopulation.md#filter) &mdash; _Method in class_ [`ExcludeLowPopulation`](Piwik/DataTable/Filter/ExcludeLowPopulation.md)
- [`filter()`](Piwik/DataTable/Filter/GroupBy.md#filter) &mdash; _Method in class_ [`GroupBy`](Piwik/DataTable/Filter/GroupBy.md)
- [`filter()`](Piwik/DataTable/Filter/Limit.md#filter) &mdash; _Method in class_ [`Limit`](Piwik/DataTable/Filter/Limit.md)
- [`filter()`](Piwik/DataTable/Filter/MetadataCallbackAddMetadata.md#filter) &mdash; _Method in class_ [`MetadataCallbackAddMetadata`](Piwik/DataTable/Filter/MetadataCallbackAddMetadata.md)
- [`filter()`](Piwik/DataTable/Filter/Pattern.md#filter) &mdash; _Method in class_ [`Pattern`](Piwik/DataTable/Filter/Pattern.md)
- [`filter()`](Piwik/DataTable/Filter/PatternRecursive.md#filter) &mdash; _Method in class_ [`PatternRecursive`](Piwik/DataTable/Filter/PatternRecursive.md)
- [`filter()`](Piwik/DataTable/Filter/ReplaceColumnNames.md#filter) &mdash; _Method in class_ [`ReplaceColumnNames`](Piwik/DataTable/Filter/ReplaceColumnNames.md)
- [`filter()`](Piwik/DataTable/Filter/ReplaceSummaryRowLabel.md#filter) &mdash; _Method in class_ [`ReplaceSummaryRowLabel`](Piwik/DataTable/Filter/ReplaceSummaryRowLabel.md)
- [`filter()`](Piwik/DataTable/Filter/Sort.md#filter) &mdash; _Method in class_ [`Sort`](Piwik/DataTable/Filter/Sort.md)
- [`filter()`](Piwik/DataTable/Filter/Truncate.md#filter) &mdash; _Method in class_ [`Truncate`](Piwik/DataTable/Filter/Truncate.md)
- [`filter()`](Piwik/DataTable/Map.md#filter) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`factory()`](Piwik/Date.md#factory) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`fetchAll()`](Piwik/Db.md#fetchall) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`fetchRow()`](Piwik/Db.md#fetchrow) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`fetchOne()`](Piwik/Db.md#fetchone) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`fetchAssoc()`](Piwik/Db.md#fetchassoc) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`Filesystem`](Piwik/Filesystem.md) &mdash; _Class in namespace_ `Piwik` 
- [`FrontController`](Piwik/FrontController.md) &mdash; _Class in namespace_ `Piwik` 
- [`fetchRemoteFile()`](Piwik/Http.md#fetchremotefile) &mdash; _Method in class_ [`Http`](Piwik/Http.md)
- [`$flags`](Piwik/Notification.md#$flags) &mdash; _Property in class_ [`Notification`](Piwik/Notification.md)
- [`factory()`](Piwik/Period.md#factory) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`factory()`](Piwik/ScheduledTime.md#factory) &mdash; _Method in class_ [`ScheduledTime`](Piwik/ScheduledTime.md)
- [`$footer_icons`](Piwik/ViewDataTable/Config.md#$footer_icons) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$filters`](Piwik/ViewDataTable/Config.md#$filters) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`Factory`](Piwik/ViewDataTable/Factory.md) &mdash; _Class in namespace_ `Piwik\ViewDataTable` 
- [`$filter_sort_column`](Piwik/ViewDataTable/RequestConfig.md#$filter_sort_column) &mdash; _Property in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)
- [`$filter_sort_order`](Piwik/ViewDataTable/RequestConfig.md#$filter_sort_order) &mdash; _Property in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)
- [`$filter_limit`](Piwik/ViewDataTable/RequestConfig.md#$filter_limit) &mdash; _Property in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)
- [`$filter_offset`](Piwik/ViewDataTable/RequestConfig.md#$filter_offset) &mdash; _Property in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)
- [`$filter_pattern`](Piwik/ViewDataTable/RequestConfig.md#$filter_pattern) &mdash; _Property in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)
- [`$filter_column`](Piwik/ViewDataTable/RequestConfig.md#$filter_column) &mdash; _Property in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)
- [`$filter_excludelowpop`](Piwik/ViewDataTable/RequestConfig.md#$filter_excludelowpop) &mdash; _Property in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)
- [`$filter_excludelowpop_value`](Piwik/ViewDataTable/RequestConfig.md#$filter_excludelowpop_value) &mdash; _Property in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)

## G

- [`getRequestArrayFromString()`](Piwik/API/Request.md#getrequestarrayfromstring) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
- [`getClassNameAPI()`](Piwik/API/Request.md#getclassnameapi) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
- [`getRequestParametersGET()`](Piwik/API/Request.md#getrequestparametersget) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
- [`getBaseReportUrl()`](Piwik/API/Request.md#getbasereporturl) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
- [`getCurrentUrlWithoutGenericFilters()`](Piwik/API/Request.md#getcurrenturlwithoutgenericfilters) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
- [`getRawSegmentFromRequest()`](Piwik/API/Request.md#getrawsegmentfromrequest) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
- [`getNumeric()`](Piwik/Archive.md#getnumeric) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
- [`getBlob()`](Piwik/Archive.md#getblob) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
- [`getDataTableFromNumeric()`](Piwik/Archive.md#getdatatablefromnumeric) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
- [`getDataTable()`](Piwik/Archive.md#getdatatable) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
- [`getDataTableExpanded()`](Piwik/Archive.md#getdatatableexpanded) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
- [`getParams()`](Piwik/Archive.md#getparams) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
- [`getDataTableFromArchive()`](Piwik/Archive.md#getdatatablefromarchive) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
- [`getParams()`](Piwik/ArchiveProcessor.md#getparams) &mdash; _Method in class_ [`ArchiveProcessor`](Piwik/ArchiveProcessor.md)
- [`getLogAggregator()`](Piwik/ArchiveProcessor.md#getlogaggregator) &mdash; _Method in class_ [`ArchiveProcessor`](Piwik/ArchiveProcessor.md)
- [`getPeriod()`](Piwik/ArchiveProcessor/Parameters.md#getperiod) &mdash; _Method in class_ [`Parameters`](Piwik/ArchiveProcessor/Parameters.md)
- [`getSite()`](Piwik/ArchiveProcessor/Parameters.md#getsite) &mdash; _Method in class_ [`Parameters`](Piwik/ArchiveProcessor/Parameters.md)
- [`getSegment()`](Piwik/ArchiveProcessor/Parameters.md#getsegment) &mdash; _Method in class_ [`Parameters`](Piwik/ArchiveProcessor/Parameters.md)
- [`getRequestVar()`](Piwik/Common.md#getrequestvar) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`getLanguagesList()`](Piwik/Common.md#getlanguageslist) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`getLanguageToCountryList()`](Piwik/Common.md#getlanguagetocountrylist) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`getSqlStringFieldsArray()`](Piwik/Common.md#getsqlstringfieldsarray) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`getSelectsFromRangedColumn()`](Piwik/DataAccess/LogAggregator.md#getselectsfromrangedcolumn) &mdash; _Method in class_ [`LogAggregator`](Piwik/DataAccess/LogAggregator.md)
- [`getSortedByColumnName()`](Piwik/DataTable.md#getsortedbycolumnname) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getRowFromLabel()`](Piwik/DataTable.md#getrowfromlabel) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getRowIdFromLabel()`](Piwik/DataTable.md#getrowidfromlabel) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getEmptyClone()`](Piwik/DataTable.md#getemptyclone) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getRowFromId()`](Piwik/DataTable.md#getrowfromid) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getRowFromIdSubDataTable()`](Piwik/DataTable.md#getrowfromidsubdatatable) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getId()`](Piwik/DataTable.md#getid) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getRows()`](Piwik/DataTable.md#getrows) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getColumn()`](Piwik/DataTable.md#getcolumn) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getColumnsStartingWith()`](Piwik/DataTable.md#getcolumnsstartingwith) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getColumns()`](Piwik/DataTable.md#getcolumns) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getRowsMetadata()`](Piwik/DataTable.md#getrowsmetadata) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getRowsCount()`](Piwik/DataTable.md#getrowscount) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getFirstRow()`](Piwik/DataTable.md#getfirstrow) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getLastRow()`](Piwik/DataTable.md#getlastrow) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getRowsCountRecursive()`](Piwik/DataTable.md#getrowscountrecursive) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getSerialized()`](Piwik/DataTable.md#getserialized) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getMetadata()`](Piwik/DataTable.md#getmetadata) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getAllTableMetadata()`](Piwik/DataTable.md#getalltablemetadata) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getSingleUnitLabel()`](Piwik/DataTable/Filter/BeautifyRangeLabels.md#getsingleunitlabel) &mdash; _Method in class_ [`BeautifyRangeLabels`](Piwik/DataTable/Filter/BeautifyRangeLabels.md)
- [`getRangeLabel()`](Piwik/DataTable/Filter/BeautifyRangeLabels.md#getrangelabel) &mdash; _Method in class_ [`BeautifyRangeLabels`](Piwik/DataTable/Filter/BeautifyRangeLabels.md)
- [`getUnboundedLabel()`](Piwik/DataTable/Filter/BeautifyRangeLabels.md#getunboundedlabel) &mdash; _Method in class_ [`BeautifyRangeLabels`](Piwik/DataTable/Filter/BeautifyRangeLabels.md)
- [`getSingleUnitLabel()`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md#getsingleunitlabel) &mdash; _Method in class_ [`BeautifyTimeRangeLabels`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md)
- [`getRangeLabel()`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md#getrangelabel) &mdash; _Method in class_ [`BeautifyTimeRangeLabels`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md)
- [`getUnboundedLabel()`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md#getunboundedlabel) &mdash; _Method in class_ [`BeautifyTimeRangeLabels`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md)
- [`GroupBy`](Piwik/DataTable/Filter/GroupBy.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`getKeyName()`](Piwik/DataTable/Map.md#getkeyname) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`getRowsCount()`](Piwik/DataTable/Map.md#getrowscount) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`getDataTables()`](Piwik/DataTable/Map.md#getdatatables) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`getTable()`](Piwik/DataTable/Map.md#gettable) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`getFirstRow()`](Piwik/DataTable/Map.md#getfirstrow) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`getLastRow()`](Piwik/DataTable/Map.md#getlastrow) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`getColumn()`](Piwik/DataTable/Map.md#getcolumn) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`getEmptyClone()`](Piwik/DataTable/Map.md#getemptyclone) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`getMetadataIntersectArray()`](Piwik/DataTable/Map.md#getmetadataintersectarray) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`getColumns()`](Piwik/DataTable/Map.md#getcolumns) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`getColumn()`](Piwik/DataTable/Row.md#getcolumn) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`getMetadata()`](Piwik/DataTable/Row.md#getmetadata) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`getColumns()`](Piwik/DataTable/Row.md#getcolumns) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`getIdSubDataTable()`](Piwik/DataTable/Row.md#getidsubdatatable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`getSubtable()`](Piwik/DataTable/Row.md#getsubtable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`getDatetime()`](Piwik/Date.md#getdatetime) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`getDateStartUTC()`](Piwik/Date.md#getdatestartutc) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`getDateEndUTC()`](Piwik/Date.md#getdateendutc) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`getTimestampUTC()`](Piwik/Date.md#gettimestamputc) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`getTimestamp()`](Piwik/Date.md#gettimestamp) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`getLocalized()`](Piwik/Date.md#getlocalized) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`get()`](Piwik/Db.md#get) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`getDbLock()`](Piwik/Db.md#getdblock) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`globr()`](Piwik/Filesystem.md#globr) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
- [`getTransportMethod()`](Piwik/Http.md#gettransportmethod) &mdash; _Method in class_ [`Http`](Piwik/Http.md)
- [`getIPv4FromMappedIPv6()`](Piwik/IP.md#getipv4frommappedipv6) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`getIpsForRange()`](Piwik/IP.md#getipsforrange) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`getIpFromHeader()`](Piwik/IP.md#getipfromheader) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`getNonProxyIpFromHeader()`](Piwik/IP.md#getnonproxyipfromheader) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`getLastIpFromList()`](Piwik/IP.md#getlastipfromlist) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`getHostByAddr()`](Piwik/IP.md#gethostbyaddr) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`getVisitsMetricNames()`](Piwik/Metrics.md#getvisitsmetricnames) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
- [`getMappingFromIdToName()`](Piwik/Metrics.md#getmappingfromidtoname) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
- [`getDefaultMetricTranslations()`](Piwik/Metrics.md#getdefaultmetrictranslations) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
- [`getDefaultMetrics()`](Piwik/Metrics.md#getdefaultmetrics) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
- [`getDefaultProcessedMetrics()`](Piwik/Metrics.md#getdefaultprocessedmetrics) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
- [`getReadableColumnName()`](Piwik/Metrics.md#getreadablecolumnname) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
- [`getMetricIdsToProcessReportTotal()`](Piwik/Metrics.md#getmetricidstoprocessreporttotal) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
- [`getDefaultMetricsDocumentation()`](Piwik/Metrics.md#getdefaultmetricsdocumentation) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
- [`getPercentVisitColumn()`](Piwik/Metrics.md#getpercentvisitcolumn) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
- [`getPrettyNumber()`](Piwik/MetricsFormatter.md#getprettynumber) &mdash; _Method in class_ [`MetricsFormatter`](Piwik/MetricsFormatter.md)
- [`getPrettyTimeFromSeconds()`](Piwik/MetricsFormatter.md#getprettytimefromseconds) &mdash; _Method in class_ [`MetricsFormatter`](Piwik/MetricsFormatter.md)
- [`getPrettySizeFromBytes()`](Piwik/MetricsFormatter.md#getprettysizefrombytes) &mdash; _Method in class_ [`MetricsFormatter`](Piwik/MetricsFormatter.md)
- [`getPrettyMoney()`](Piwik/MetricsFormatter.md#getprettymoney) &mdash; _Method in class_ [`MetricsFormatter`](Piwik/MetricsFormatter.md)
- [`getPrettyValue()`](Piwik/MetricsFormatter.md#getprettyvalue) &mdash; _Method in class_ [`MetricsFormatter`](Piwik/MetricsFormatter.md)
- [`getCurrencySymbol()`](Piwik/MetricsFormatter.md#getcurrencysymbol) &mdash; _Method in class_ [`MetricsFormatter`](Piwik/MetricsFormatter.md)
- [`getCurrencyList()`](Piwik/MetricsFormatter.md#getcurrencylist) &mdash; _Method in class_ [`MetricsFormatter`](Piwik/MetricsFormatter.md)
- [`getNonce()`](Piwik/Nonce.md#getnonce) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
- [`getOrigin()`](Piwik/Nonce.md#getorigin) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
- [`getAcceptableOrigins()`](Piwik/Nonce.md#getacceptableorigins) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
- [`getPriority()`](Piwik/Notification.md#getpriority) &mdash; _Method in class_ [`Notification`](Piwik/Notification.md)
- [`get()`](Piwik/Option.md#get) &mdash; _Method in class_ [`Option`](Piwik/Option.md)
- [`getDateStart()`](Piwik/Period.md#getdatestart) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`getDateEnd()`](Piwik/Period.md#getdateend) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`getId()`](Piwik/Period.md#getid) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`getLabel()`](Piwik/Period.md#getlabel) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`getNumberOfSubperiods()`](Piwik/Period.md#getnumberofsubperiods) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`getSubperiods()`](Piwik/Period.md#getsubperiods) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`getPrettyString()`](Piwik/Period.md#getprettystring) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`getLocalizedShortString()`](Piwik/Period.md#getlocalizedshortstring) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`getLocalizedLongString()`](Piwik/Period.md#getlocalizedlongstring) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`getRangeString()`](Piwik/Period.md#getrangestring) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`getLocalizedShortString()`](Piwik/Period/Range.md#getlocalizedshortstring) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
- [`getLocalizedLongString()`](Piwik/Period/Range.md#getlocalizedlongstring) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
- [`getDateStart()`](Piwik/Period/Range.md#getdatestart) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
- [`getPrettyString()`](Piwik/Period/Range.md#getprettystring) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
- [`getDateEnd()`](Piwik/Period/Range.md#getdateend) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
- [`getLastDate()`](Piwik/Period/Range.md#getlastdate) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
- [`getRelativeToEndDate()`](Piwik/Period/Range.md#getrelativetoenddate) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
- [`getCurrentUserEmail()`](Piwik/Piwik.md#getcurrentuseremail) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`getSuperUserLogin()`](Piwik/Piwik.md#getsuperuserlogin) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`getSuperUserEmail()`](Piwik/Piwik.md#getsuperuseremail) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`getCurrentUserLogin()`](Piwik/Piwik.md#getcurrentuserlogin) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`getCurrentUserTokenAuth()`](Piwik/Piwik.md#getcurrentusertokenauth) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`getInformation()`](Piwik/Plugin.md#getinformation) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`getListHooksRegistered()`](Piwik/Plugin.md#getlisthooksregistered) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`getVersion()`](Piwik/Plugin.md#getversion) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`getPluginName()`](Piwik/Plugin.md#getpluginname) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`getPluginNameFromBacktrace()`](Piwik/Plugin.md#getpluginnamefrombacktrace) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`getProcessor()`](Piwik/Plugin/Archiver.md#getprocessor) &mdash; _Method in class_ [`Archiver`](Piwik/Plugin/Archiver.md)
- [`getLogAggregator()`](Piwik/Plugin/Archiver.md#getlogaggregator) &mdash; _Method in class_ [`Archiver`](Piwik/Plugin/Archiver.md)
- [`getDateParameterInTimezone()`](Piwik/Plugin/Controller.md#getdateparameterintimezone) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`getDefaultAction()`](Piwik/Plugin/Controller.md#getdefaultaction) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`getLastUnitGraph()`](Piwik/Plugin/Controller.md#getlastunitgraph) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`getLastUnitGraphAcrossPlugins()`](Piwik/Plugin/Controller.md#getlastunitgraphacrossplugins) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`getUrlSparkline()`](Piwik/Plugin/Controller.md#geturlsparkline) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`getDefaultWebsiteId()`](Piwik/Plugin/Controller.md#getdefaultwebsiteid) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`getDefaultDate()`](Piwik/Plugin/Controller.md#getdefaultdate) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`getDefaultPeriod()`](Piwik/Plugin/Controller.md#getdefaultperiod) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`getCalendarPrettyDate()`](Piwik/Plugin/Controller.md#getcalendarprettydate) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`getEvolutionHtml()`](Piwik/Plugin/Controller.md#getevolutionhtml) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`getThemeEnabled()`](Piwik/Plugin/Manager.md#getthemeenabled) &mdash; _Method in class_ [`Manager`](Piwik/Plugin/Manager.md)
- [`getInstalledPluginsName()`](Piwik/Plugin/Manager.md#getinstalledpluginsname) &mdash; _Method in class_ [`Manager`](Piwik/Plugin/Manager.md)
- [`getMissingPlugins()`](Piwik/Plugin/Manager.md#getmissingplugins) &mdash; _Method in class_ [`Manager`](Piwik/Plugin/Manager.md)
- [`getIntroduction()`](Piwik/Plugin/Settings.md#getintroduction) &mdash; _Method in class_ [`Settings`](Piwik/Plugin/Settings.md)
- [`getSettingsForCurrentUser()`](Piwik/Plugin/Settings.md#getsettingsforcurrentuser) &mdash; _Method in class_ [`Settings`](Piwik/Plugin/Settings.md)
- [`getSettings()`](Piwik/Plugin/Settings.md#getsettings) &mdash; _Method in class_ [`Settings`](Piwik/Plugin/Settings.md)
- [`getSettingValue()`](Piwik/Plugin/Settings.md#getsettingvalue) &mdash; _Method in class_ [`Settings`](Piwik/Plugin/Settings.md)
- [`getDefaultConfig()`](Piwik/Plugin/ViewDataTable.md#getdefaultconfig) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`getDefaultRequestConfig()`](Piwik/Plugin/ViewDataTable.md#getdefaultrequestconfig) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`getViewDataTableId()`](Piwik/Plugin/ViewDataTable.md#getviewdatatableid) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`getDataTable()`](Piwik/Plugin/ViewDataTable.md#getdatatable) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`Graph`](Piwik/Plugins/CoreVisualizations/Visualizations/Graph.md) &mdash; _Class in namespace_ `Piwik\Plugins\CoreVisualizations\Visualizations` 
- [`Goals`](Piwik/Plugins/Goals/Visualizations/Goals.md) &mdash; _Class in namespace_ `Piwik\Plugins\Goals\Visualizations` 
- [`generateQuery()`](Piwik/RankingQuery.md#generatequery) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
- [`getObjectInstance()`](Piwik/ScheduledTask.md#getobjectinstance) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`getClassName()`](Piwik/ScheduledTask.md#getclassname) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`getMethodName()`](Piwik/ScheduledTask.md#getmethodname) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`getMethodParameter()`](Piwik/ScheduledTask.md#getmethodparameter) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`getScheduledTime()`](Piwik/ScheduledTask.md#getscheduledtime) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`getRescheduledTime()`](Piwik/ScheduledTask.md#getrescheduledtime) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`getPriority()`](Piwik/ScheduledTask.md#getpriority) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`getName()`](Piwik/ScheduledTask.md#getname) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`getString()`](Piwik/Segment.md#getstring) &mdash; _Method in class_ [`Segment`](Piwik/Segment.md)
- [`getHash()`](Piwik/Segment.md#gethash) &mdash; _Method in class_ [`Segment`](Piwik/Segment.md)
- [`getSelectQuery()`](Piwik/Segment.md#getselectquery) &mdash; _Method in class_ [`Segment`](Piwik/Segment.md)
- [`getPiwikUrl()`](Piwik/SettingsPiwik.md#getpiwikurl) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
- [`getName()`](Piwik/Settings/Setting.md#getname) &mdash; _Method in class_ [`Setting`](Piwik/Settings/Setting.md)
- [`getValue()`](Piwik/Settings/Setting.md#getvalue) &mdash; _Method in class_ [`Setting`](Piwik/Settings/Setting.md)
- [`getKey()`](Piwik/Settings/Setting.md#getkey) &mdash; _Method in class_ [`Setting`](Piwik/Settings/Setting.md)
- [`getOrder()`](Piwik/Settings/Setting.md#getorder) &mdash; _Method in class_ [`Setting`](Piwik/Settings/Setting.md)
- [`getOrder()`](Piwik/Settings/SystemSetting.md#getorder) &mdash; _Method in class_ [`SystemSetting`](Piwik/Settings/SystemSetting.md)
- [`getOrder()`](Piwik/Settings/UserSetting.md#getorder) &mdash; _Method in class_ [`UserSetting`](Piwik/Settings/UserSetting.md)
- [`getInstance()`](Piwik/Singleton.md#getinstance) &mdash; _Method in class_ [`Singleton`](Piwik/Singleton.md)
- [`getName()`](Piwik/Site.md#getname) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getMainUrl()`](Piwik/Site.md#getmainurl) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getId()`](Piwik/Site.md#getid) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getType()`](Piwik/Site.md#gettype) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getCreationDate()`](Piwik/Site.md#getcreationdate) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getTimezone()`](Piwik/Site.md#gettimezone) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getCurrency()`](Piwik/Site.md#getcurrency) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getExcludedIps()`](Piwik/Site.md#getexcludedips) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getExcludedQueryParameters()`](Piwik/Site.md#getexcludedqueryparameters) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getSearchKeywordParameters()`](Piwik/Site.md#getsearchkeywordparameters) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getSearchCategoryParameters()`](Piwik/Site.md#getsearchcategoryparameters) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getIdSitesFromIdSitesString()`](Piwik/Site.md#getidsitesfromidsitesstring) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getNameFor()`](Piwik/Site.md#getnamefor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getTimezoneFor()`](Piwik/Site.md#gettimezonefor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getTypeFor()`](Piwik/Site.md#gettypefor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getCreationDateFor()`](Piwik/Site.md#getcreationdatefor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getMainUrlFor()`](Piwik/Site.md#getmainurlfor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getCurrencyFor()`](Piwik/Site.md#getcurrencyfor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getExcludedIpsFor()`](Piwik/Site.md#getexcludedipsfor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getExcludedQueryParametersFor()`](Piwik/Site.md#getexcludedqueryparametersfor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getCurrentUrl()`](Piwik/Url.md#getcurrenturl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getCurrentUrlWithoutQueryString()`](Piwik/Url.md#getcurrenturlwithoutquerystring) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getCurrentUrlWithoutFileName()`](Piwik/Url.md#getcurrenturlwithoutfilename) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getCurrentScriptPath()`](Piwik/Url.md#getcurrentscriptpath) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getCurrentScriptName()`](Piwik/Url.md#getcurrentscriptname) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getCurrentScheme()`](Piwik/Url.md#getcurrentscheme) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getCurrentHost()`](Piwik/Url.md#getcurrenthost) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getCurrentQueryString()`](Piwik/Url.md#getcurrentquerystring) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getArrayFromCurrentQueryString()`](Piwik/Url.md#getarrayfromcurrentquerystring) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getCurrentQueryStringWithParametersModified()`](Piwik/Url.md#getcurrentquerystringwithparametersmodified) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getQueryStringFromParameters()`](Piwik/Url.md#getquerystringfromparameters) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getReferrer()`](Piwik/Url.md#getreferrer) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getQueryStringWithExcludedParameters()`](Piwik/UrlHelper.md#getquerystringwithexcludedparameters) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
- [`getParseUrlReverse()`](Piwik/UrlHelper.md#getparseurlreverse) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
- [`getArrayFromQueryString()`](Piwik/UrlHelper.md#getarrayfromquerystring) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
- [`getParameterFromQueryString()`](Piwik/UrlHelper.md#getparameterfromquerystring) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
- [`getPathAndQueryFromUrl()`](Piwik/UrlHelper.md#getpathandqueryfromurl) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
- [`getTemplateFile()`](Piwik/View.md#gettemplatefile) &mdash; _Method in class_ [`View`](Piwik/View.md)
- [`getTemplateVars()`](Piwik/View.md#gettemplatevars) &mdash; _Method in class_ [`View`](Piwik/View.md)
- [`getProperties()`](Piwik/ViewDataTable/Config.md#getproperties) &mdash; _Method in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`getProperties()`](Piwik/ViewDataTable/RequestConfig.md#getproperties) &mdash; _Method in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)
- [`getApiModuleToRequest()`](Piwik/ViewDataTable/RequestConfig.md#getapimoduletorequest) &mdash; _Method in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)
- [`getApiMethodToRequest()`](Piwik/ViewDataTable/RequestConfig.md#getapimethodtorequest) &mdash; _Method in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)
- [`get()`](Piwik/WidgetsList.md#get) &mdash; _Method in class_ [`WidgetsList`](Piwik/WidgetsList.md)

## H

- [`Http`](Piwik/Http.md) &mdash; _Class in namespace_ `Piwik` 
- [`hasNoClear()`](Piwik/Notification.md#hasnoclear) &mdash; _Method in class_ [`Notification`](Piwik/Notification.md)
- [`HtmlTable`](Piwik/Plugins/CoreVisualizations/Visualizations/HtmlTable.md) &mdash; _Class in namespace_ `Piwik\Plugins\CoreVisualizations\Visualizations` 
- [`Hourly`](Piwik/ScheduledTime/Hourly.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime) 
- [`$hide_annotations_view`](Piwik/ViewDataTable/Config.md#$hide_annotations_view) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)

## I

- [`insertNumericRecords()`](Piwik/ArchiveProcessor.md#insertnumericrecords) &mdash; _Method in class_ [`ArchiveProcessor`](Piwik/ArchiveProcessor.md)
- [`insertNumericRecord()`](Piwik/ArchiveProcessor.md#insertnumericrecord) &mdash; _Method in class_ [`ArchiveProcessor`](Piwik/ArchiveProcessor.md)
- [`insertBlobRecord()`](Piwik/ArchiveProcessor.md#insertblobrecord) &mdash; _Method in class_ [`ArchiveProcessor`](Piwik/ArchiveProcessor.md)
- [`isEqual()`](Piwik/DataTable.md#isequal) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`isSubtableLoaded()`](Piwik/DataTable/Row.md#issubtableloaded) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`isSummaryRow()`](Piwik/DataTable/Row.md#issummaryrow) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`isEqual()`](Piwik/DataTable/Row.md#isequal) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`isLater()`](Piwik/Date.md#islater) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`isEarlier()`](Piwik/Date.md#isearlier) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`isToday()`](Piwik/Date.md#istoday) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`isLockPrivilegeGranted()`](Piwik/Db.md#islockprivilegegranted) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`IP`](Piwik/IP.md) &mdash; _Class in namespace_ `Piwik` 
- [`isIPv4()`](Piwik/IP.md#isipv4) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`isIPv6()`](Piwik/IP.md#isipv6) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`isMappedIPv4()`](Piwik/IP.md#ismappedipv4) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`isIpInRange()`](Piwik/IP.md#isipinrange) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`info()`](Piwik/Log.md#info) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
- [`isMultiplePeriod()`](Piwik/Period.md#ismultipleperiod) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`isUserIsSuperUserOrTheUser()`](Piwik/Piwik.md#isuserissuperuserortheuser) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`isUserIsSuperUser()`](Piwik/Piwik.md#isuserissuperuser) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`isUserIsAnonymous()`](Piwik/Piwik.md#isuserisanonymous) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`isUserHasAdminAccess()`](Piwik/Piwik.md#isuserhasadminaccess) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`isUserHasSomeAdminAccess()`](Piwik/Piwik.md#isuserhassomeadminaccess) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`isUserHasViewAccess()`](Piwik/Piwik.md#isuserhasviewaccess) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`isUserHasSomeViewAccess()`](Piwik/Piwik.md#isuserhassomeviewaccess) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`isValidEmailString()`](Piwik/Piwik.md#isvalidemailstring) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`install()`](Piwik/Plugin.md#install) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`isTheme()`](Piwik/Plugin.md#istheme) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`$idSite`](Piwik/Plugin/Controller.md#$idsite) &mdash; _Property in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`isPluginActivated()`](Piwik/Plugin/Manager.md#ispluginactivated) &mdash; _Method in class_ [`Manager`](Piwik/Plugin/Manager.md)
- [`isPluginLoaded()`](Piwik/Plugin/Manager.md#ispluginloaded) &mdash; _Method in class_ [`Manager`](Piwik/Plugin/Manager.md)
- [`isViewDataTableId()`](Piwik/Plugin/ViewDataTable.md#isviewdatatableid) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`isRequestingSingleDataTable()`](Piwik/Plugin/ViewDataTable.md#isrequestingsingledatatable) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`isThereDataToDisplay()`](Piwik/Plugin/Visualization.md#istheredatatodisplay) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
- [`isEmpty()`](Piwik/Segment.md#isempty) &mdash; _Method in class_ [`Segment`](Piwik/Segment.md)
- [`isSegmentationEnabled()`](Piwik/SettingsPiwik.md#issegmentationenabled) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
- [`isUniqueVisitorsEnabled()`](Piwik/SettingsPiwik.md#isuniquevisitorsenabled) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
- [`isArchivePhpTriggered()`](Piwik/SettingsServer.md#isarchivephptriggered) &mdash; _Method in class_ [`SettingsServer`](Piwik/SettingsServer.md)
- [`isIIS()`](Piwik/SettingsServer.md#isiis) &mdash; _Method in class_ [`SettingsServer`](Piwik/SettingsServer.md)
- [`isApache()`](Piwik/SettingsServer.md#isapache) &mdash; _Method in class_ [`SettingsServer`](Piwik/SettingsServer.md)
- [`isWindows()`](Piwik/SettingsServer.md#iswindows) &mdash; _Method in class_ [`SettingsServer`](Piwik/SettingsServer.md)
- [`isTimezoneSupportEnabled()`](Piwik/SettingsServer.md#istimezonesupportenabled) &mdash; _Method in class_ [`SettingsServer`](Piwik/SettingsServer.md)
- [`isGdExtensionEnabled()`](Piwik/SettingsServer.md#isgdextensionenabled) &mdash; _Method in class_ [`SettingsServer`](Piwik/SettingsServer.md)
- [`$introduction`](Piwik/Settings/Setting.md#$introduction) &mdash; _Property in class_ [`Setting`](Piwik/Settings/Setting.md)
- [`$inlineHelp`](Piwik/Settings/Setting.md#$inlinehelp) &mdash; _Property in class_ [`Setting`](Piwik/Settings/Setting.md)
- [`isEcommerceEnabled()`](Piwik/Site.md#isecommerceenabled) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`isSiteSearchEnabled()`](Piwik/Site.md#issitesearchenabled) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`isEcommerceEnabledFor()`](Piwik/Site.md#isecommerceenabledfor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`isSiteSearchEnabledFor()`](Piwik/Site.md#issitesearchenabledfor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`isLocalUrl()`](Piwik/Url.md#islocalurl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`$idSubtable`](Piwik/ViewDataTable/RequestConfig.md#$idsubtable) &mdash; _Property in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)
- [`isDefined()`](Piwik/WidgetsList.md#isdefined) &mdash; _Method in class_ [`WidgetsList`](Piwik/WidgetsList.md)

## J

- [`JqplotGraph`](Piwik/Plugins/CoreVisualizations/Visualizations/JqplotGraph.md) &mdash; _Class in namespace_ `Piwik\Plugins\CoreVisualizations\Visualizations` 

## L

- [`LogAggregator`](Piwik/DataAccess/LogAggregator.md) &mdash; _Class in namespace_ `Piwik\DataAccess` 
- [`Limit`](Piwik/DataTable/Filter/Limit.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`$lockPrivilegeGranted`](Piwik/Db.md#$lockprivilegegranted) &mdash; _Property in class_ [`Db`](Piwik/Db.md)
- [`lockTables()`](Piwik/Db.md#locktables) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`long2ip()`](Piwik/IP.md#long2ip) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`Log`](Piwik/Log.md) &mdash; _Class in namespace_ `Piwik` 

## M

- [`mb_substr()`](Piwik/Common.md#mb_substr) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`mb_strlen()`](Piwik/Common.md#mb_strlen) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`mb_strtolower()`](Piwik/Common.md#mb_strtolower) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`makeFromIndexedArray()`](Piwik/DataTable.md#makefromindexedarray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`mergeSubtables()`](Piwik/DataTable.md#mergesubtables) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`makeFromSimpleArray()`](Piwik/DataTable.md#makefromsimplearray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`MetadataCallbackAddMetadata`](Piwik/DataTable/Filter/MetadataCallbackAddMetadata.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`MetadataCallbackReplace`](Piwik/DataTable/Filter/MetadataCallbackReplace.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`Map`](Piwik/DataTable/Map.md) &mdash; _Class in namespace_ [`Piwik\DataTable`](Piwik/DataTable) 
- [`mergeChildren()`](Piwik/DataTable/Map.md#mergechildren) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`mergeSubtables()`](Piwik/DataTable/Map.md#mergesubtables) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`$maxVisitsSummed`](Piwik/DataTable/Row.md#$maxvisitssummed) &mdash; _Property in class_ [`Row`](Piwik/DataTable/Row.md)
- [`mkdir()`](Piwik/Filesystem.md#mkdir) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
- [`Mail`](Piwik/Mail.md) &mdash; _Class in namespace_ `Piwik` 
- [`MenuAbstract`](Piwik/Menu/MenuAbstract.md) &mdash; _Class in namespace_ `Piwik\Menu` 
- [`MenuAdmin`](Piwik/Menu/MenuAdmin.md) &mdash; _Class in namespace_ `Piwik\Menu` 
- [`MenuMain`](Piwik/Menu/MenuMain.md) &mdash; _Class in namespace_ `Piwik\Menu` 
- [`MenuTop`](Piwik/Menu/MenuTop.md) &mdash; _Class in namespace_ `Piwik\Menu` 
- [`Metrics`](Piwik/Metrics.md) &mdash; _Class in namespace_ `Piwik` 
- [`$mappingFromIdToName`](Piwik/Metrics.md#$mappingfromidtoname) &mdash; _Property in class_ [`Metrics`](Piwik/Metrics.md)
- [`$mappingFromIdToNameGoal`](Piwik/Metrics.md#$mappingfromidtonamegoal) &mdash; _Property in class_ [`Metrics`](Piwik/Metrics.md)
- [`$mappingFromNameToId`](Piwik/Metrics.md#$mappingfromnametoid) &mdash; _Property in class_ [`Metrics`](Piwik/Metrics.md)
- [`MetricsFormatter`](Piwik/MetricsFormatter.md) &mdash; _Class in namespace_ `Piwik` 
- [`$message`](Piwik/Notification.md#$message) &mdash; _Property in class_ [`Notification`](Piwik/Notification.md)
- [`Manager`](Piwik/Notification/Manager.md) &mdash; _Class in namespace_ [`Piwik\Notification`](Piwik/Notification) 
- [`makePeriodFromQueryParams()`](Piwik/Period.md#makeperiodfromqueryparams) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`Manager`](Piwik/Plugin/Manager.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin) 
- [`Monthly`](Piwik/ScheduledTime/Monthly.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime) 
- [`$metrics_documentation`](Piwik/ViewDataTable/Config.md#$metrics_documentation) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)

## N

- [`numberSort()`](Piwik/DataTable/Filter/Sort.md#numbersort) &mdash; _Method in class_ [`Sort`](Piwik/DataTable/Filter/Sort.md)
- [`naturalSort()`](Piwik/DataTable/Filter/Sort.md#naturalsort) &mdash; _Method in class_ [`Sort`](Piwik/DataTable/Filter/Sort.md)
- [`now()`](Piwik/Date.md#now) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`N2P()`](Piwik/IP.md#n2p) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`NoAccessException`](Piwik/NoAccessException.md) &mdash; _Class in namespace_ `Piwik` 
- [`Nonce`](Piwik/Nonce.md) &mdash; _Class in namespace_ `Piwik` 
- [`Notification`](Piwik/Notification.md) &mdash; _Class in namespace_ `Piwik` 
- [`notify()`](Piwik/Notification/Manager.md#notify) &mdash; _Method in class_ [`Manager`](Piwik/Notification/Manager.md)

## O

- [`optimizeTables()`](Piwik/Db.md#optimizetables) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`Option`](Piwik/Option.md) &mdash; _Class in namespace_ `Piwik` 
- [`$overridableProperties`](Piwik/ViewDataTable/Config.md#$overridableproperties) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$overridableProperties`](Piwik/ViewDataTable/RequestConfig.md#$overridableproperties) &mdash; _Property in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)

## P

- [`process()`](Piwik/API/Request.md#process) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
- [`processRequest()`](Piwik/API/Request.md#processrequest) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
- [`Parameters`](Piwik/ArchiveProcessor/Parameters.md) &mdash; _Class in namespace_ [`Piwik\ArchiveProcessor`](Piwik/ArchiveProcessor) 
- [`prefixTable()`](Piwik/Common.md#prefixtable) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`prependPlusSignToNumber()`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md#prependplussigntonumber) &mdash; _Method in class_ [`CalculateEvolutionFilter`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md)
- [`Pattern`](Piwik/DataTable/Filter/Pattern.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`PatternRecursive`](Piwik/DataTable/Filter/PatternRecursive.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`P2N()`](Piwik/IP.md#p2n) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`prettyPrint()`](Piwik/IP.md#prettyprint) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`$priority`](Piwik/Notification.md#$priority) &mdash; _Property in class_ [`Notification`](Piwik/Notification.md)
- [`Period`](Piwik/Period.md) &mdash; _Class in namespace_ `Piwik` 
- [`parseDateRange()`](Piwik/Period/Range.md#parsedaterange) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
- [`Piwik`](Piwik/Piwik.md) &mdash; _Class in namespace_ `Piwik` 
- [`postEvent()`](Piwik/Piwik.md#postevent) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`Plugin`](Piwik/Plugin.md) &mdash; _Class in namespace_ `Piwik` 
- [`postLoad()`](Piwik/Plugin.md#postload) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`$pluginName`](Piwik/Plugin/Controller.md#$pluginname) &mdash; _Property in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`Pie`](Piwik/Plugins/CoreVisualizations/Visualizations/JqplotGraph/Pie.md) &mdash; _Class in namespace_ [`Piwik\Plugins\CoreVisualizations\Visualizations\JqplotGraph`](Piwik/Plugins/CoreVisualizations/Visualizations/JqplotGraph) 
- [`partitionResultIntoMultipleGroups()`](Piwik/RankingQuery.md#partitionresultintomultiplegroups) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)

## Q

- [`queryVisitsByDimension()`](Piwik/DataAccess/LogAggregator.md#queryvisitsbydimension) &mdash; _Method in class_ [`LogAggregator`](Piwik/DataAccess/LogAggregator.md)
- [`queryEcommerceItems()`](Piwik/DataAccess/LogAggregator.md#queryecommerceitems) &mdash; _Method in class_ [`LogAggregator`](Piwik/DataAccess/LogAggregator.md)
- [`queryActionsByDimension()`](Piwik/DataAccess/LogAggregator.md#queryactionsbydimension) &mdash; _Method in class_ [`LogAggregator`](Piwik/DataAccess/LogAggregator.md)
- [`queueFilter()`](Piwik/DataTable.md#queuefilter) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`queueFilter()`](Piwik/DataTable/Map.md#queuefilter) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`query()`](Piwik/Db.md#query) &mdash; _Method in class_ [`Db`](Piwik/Db.md)

## R

- [`Request`](Piwik/API/Request.md) &mdash; _Class in namespace_ `Piwik\API` 
- [`renameColumn()`](Piwik/DataTable.md#renamecolumn) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`ReplaceColumnNames`](Piwik/DataTable/Filter/ReplaceColumnNames.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`ReplaceSummaryRowLabel`](Piwik/DataTable/Filter/ReplaceSummaryRowLabel.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`renameColumn()`](Piwik/DataTable/Map.md#renamecolumn) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`Row`](Piwik/DataTable/Row.md) &mdash; _Class in namespace_ [`Piwik\DataTable`](Piwik/DataTable) 
- [`renameColumn()`](Piwik/DataTable/Row.md#renamecolumn) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`removeSubtable()`](Piwik/DataTable/Row.md#removesubtable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`releaseDbLock()`](Piwik/Db.md#releasedblock) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`$raw`](Piwik/Notification.md#$raw) &mdash; _Property in class_ [`Notification`](Piwik/Notification.md)
- [`Range`](Piwik/Period/Range.md) &mdash; _Class in namespace_ [`Piwik\Period`](Piwik/Period) 
- [`redirectToModule()`](Piwik/Piwik.md#redirecttomodule) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`renderReport()`](Piwik/Plugin/Controller.md#renderreport) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`redirectToIndex()`](Piwik/Plugin/Controller.md#redirecttoindex) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`returnLoadedPluginsInfo()`](Piwik/Plugin/Manager.md#returnloadedpluginsinfo) &mdash; _Method in class_ [`Manager`](Piwik/Plugin/Manager.md)
- [`removeAllPluginSettings()`](Piwik/Plugin/Settings.md#removeallpluginsettings) &mdash; _Method in class_ [`Settings`](Piwik/Plugin/Settings.md)
- [`removeSettingValue()`](Piwik/Plugin/Settings.md#removesettingvalue) &mdash; _Method in class_ [`Settings`](Piwik/Plugin/Settings.md)
- [`$requestConfig`](Piwik/Plugin/ViewDataTable.md#$requestconfig) &mdash; _Property in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`render()`](Piwik/Plugin/ViewDataTable.md#render) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`RankingQuery`](Piwik/RankingQuery.md) &mdash; _Class in namespace_ `Piwik` 
- [`removeAllUserSettingsForUser()`](Piwik/Settings/UserSetting.md#removeallusersettingsforuser) &mdash; _Method in class_ [`UserSetting`](Piwik/Settings/UserSetting.md)
- [`rescheduleTask()`](Piwik/TaskScheduler.md#rescheduletask) &mdash; _Method in class_ [`TaskScheduler`](Piwik/TaskScheduler.md)
- [`redirectToReferrer()`](Piwik/Url.md#redirecttoreferrer) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`redirectToUrl()`](Piwik/Url.md#redirecttourl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`render()`](Piwik/View.md#render) &mdash; _Method in class_ [`View`](Piwik/View.md)
- [`$related_reports`](Piwik/ViewDataTable/Config.md#$related_reports) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$report_id`](Piwik/ViewDataTable/Config.md#$report_id) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md) &mdash; _Class in namespace_ `Piwik\ViewDataTable` 
- [`$request_parameters_to_modify`](Piwik/ViewDataTable/RequestConfig.md#$request_parameters_to_modify) &mdash; _Property in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)
- [`remove()`](Piwik/WidgetsList.md#remove) &mdash; _Method in class_ [`WidgetsList`](Piwik/WidgetsList.md)

## S

- [`sanitizeInputValues()`](Piwik/Common.md#sanitizeinputvalues) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`sort()`](Piwik/DataTable.md#sort) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`setMaximumDepthLevelAllowedAtLeast()`](Piwik/DataTable.md#setmaximumdepthlevelallowedatleast) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`setMetadata()`](Piwik/DataTable.md#setmetadata) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`setMetadataValues()`](Piwik/DataTable.md#setmetadatavalues) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`setAllTableMetadata()`](Piwik/DataTable.md#setalltablemetadata) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`setMaximumAllowedRows()`](Piwik/DataTable.md#setmaximumallowedrows) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`Sort`](Piwik/DataTable/Filter/Sort.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`setOrder()`](Piwik/DataTable/Filter/Sort.md#setorder) &mdash; _Method in class_ [`Sort`](Piwik/DataTable/Filter/Sort.md)
- [`sortString()`](Piwik/DataTable/Filter/Sort.md#sortstring) &mdash; _Method in class_ [`Sort`](Piwik/DataTable/Filter/Sort.md)
- [`setKeyName()`](Piwik/DataTable/Map.md#setkeyname) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`sumSubtable()`](Piwik/DataTable/Row.md#sumsubtable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`setSubtable()`](Piwik/DataTable/Row.md#setsubtable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`setColumns()`](Piwik/DataTable/Row.md#setcolumns) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`setColumn()`](Piwik/DataTable/Row.md#setcolumn) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`setMetadata()`](Piwik/DataTable/Row.md#setmetadata) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`sumRow()`](Piwik/DataTable/Row.md#sumrow) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`sumRowMetadata()`](Piwik/DataTable/Row.md#sumrowmetadata) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`Simple`](Piwik/DataTable/Simple.md) &mdash; _Class in namespace_ [`Piwik\DataTable`](Piwik/DataTable) 
- [`setTimezone()`](Piwik/Date.md#settimezone) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`setTime()`](Piwik/Date.md#settime) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`setDay()`](Piwik/Date.md#setday) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`setYear()`](Piwik/Date.md#setyear) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`subDay()`](Piwik/Date.md#subday) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`subWeek()`](Piwik/Date.md#subweek) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`subMonth()`](Piwik/Date.md#submonth) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`subYear()`](Piwik/Date.md#subyear) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`subHour()`](Piwik/Date.md#subhour) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`subPeriod()`](Piwik/Date.md#subperiod) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`secondsToDays()`](Piwik/Date.md#secondstodays) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`segmentedFetchFirst()`](Piwik/Db.md#segmentedfetchfirst) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`segmentedFetchOne()`](Piwik/Db.md#segmentedfetchone) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`segmentedFetchAll()`](Piwik/Db.md#segmentedfetchall) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`segmentedQuery()`](Piwik/Db.md#segmentedquery) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`sendHttpRequest()`](Piwik/Http.md#sendhttprequest) &mdash; _Method in class_ [`Http`](Piwik/Http.md)
- [`sanitizeIp()`](Piwik/IP.md#sanitizeip) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`sanitizeIpRange()`](Piwik/IP.md#sanitizeiprange) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`setFrom()`](Piwik/Mail.md#setfrom) &mdash; _Method in class_ [`Mail`](Piwik/Mail.md)
- [`set()`](Piwik/Option.md#set) &mdash; _Method in class_ [`Option`](Piwik/Option.md)
- [`setDefaultEndDate()`](Piwik/Period/Range.md#setdefaultenddate) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
- [`$strDate`](Piwik/Plugin/Controller.md#$strdate) &mdash; _Property in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`$site`](Piwik/Plugin/Controller.md#$site) &mdash; _Property in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`setDate()`](Piwik/Plugin/Controller.md#setdate) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`setMinDateView()`](Piwik/Plugin/Controller.md#setmindateview) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`setMaxDateView()`](Piwik/Plugin/Controller.md#setmaxdateview) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`setGeneralVariablesView()`](Piwik/Plugin/Controller.md#setgeneralvariablesview) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`setBasicVariablesView()`](Piwik/Plugin/Controller.md#setbasicvariablesview) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`setHostValidationVariablesView()`](Piwik/Plugin/Controller.md#sethostvalidationvariablesview) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`setPeriodVariablesView()`](Piwik/Plugin/Controller.md#setperiodvariablesview) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`Settings`](Piwik/Plugin/Settings.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin) 
- [`save()`](Piwik/Plugin/Settings.md#save) &mdash; _Method in class_ [`Settings`](Piwik/Plugin/Settings.md)
- [`setSettingValue()`](Piwik/Plugin/Settings.md#setsettingvalue) &mdash; _Method in class_ [`Settings`](Piwik/Plugin/Settings.md)
- [`setDataTable()`](Piwik/Plugin/ViewDataTable.md#setdatatable) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`SimpleTable`](Piwik/Plugins/ExampleVisualization/SimpleTable.md) &mdash; _Class in namespace_ `Piwik\Plugins\ExampleVisualization` 
- [`setLimit()`](Piwik/RankingQuery.md#setlimit) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
- [`setOthersLabel()`](Piwik/RankingQuery.md#setotherslabel) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
- [`setColumnToMarkExcludedRows()`](Piwik/RankingQuery.md#setcolumntomarkexcludedrows) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
- [`ScheduledTask`](Piwik/ScheduledTask.md) &mdash; _Class in namespace_ `Piwik` 
- [`ScheduledTime`](Piwik/ScheduledTime.md) &mdash; _Class in namespace_ `Piwik` 
- [`setHour()`](Piwik/ScheduledTime.md#sethour) &mdash; _Method in class_ [`ScheduledTime`](Piwik/ScheduledTime.md)
- [`Segment`](Piwik/Segment.md) &mdash; _Class in namespace_ `Piwik` 
- [`SettingsPiwik`](Piwik/SettingsPiwik.md) &mdash; _Class in namespace_ `Piwik` 
- [`SettingsServer`](Piwik/SettingsServer.md) &mdash; _Class in namespace_ `Piwik` 
- [`Setting`](Piwik/Settings/Setting.md) &mdash; _Class in namespace_ `Piwik\Settings` 
- [`setStorage()`](Piwik/Settings/Setting.md#setstorage) &mdash; _Method in class_ [`Setting`](Piwik/Settings/Setting.md)
- [`setValue()`](Piwik/Settings/Setting.md#setvalue) &mdash; _Method in class_ [`Setting`](Piwik/Settings/Setting.md)
- [`SystemSetting`](Piwik/Settings/SystemSetting.md) &mdash; _Class in namespace_ `Piwik\Settings` 
- [`setUserLogin()`](Piwik/Settings/UserSetting.md#setuserlogin) &mdash; _Method in class_ [`UserSetting`](Piwik/Settings/UserSetting.md)
- [`Singleton`](Piwik/Singleton.md) &mdash; _Class in namespace_ `Piwik` 
- [`Site`](Piwik/Site.md) &mdash; _Class in namespace_ `Piwik` 
- [`setSites()`](Piwik/Site.md#setsites) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`setSitesFromArray()`](Piwik/Site.md#setsitesfromarray) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`setContentType()`](Piwik/View.md#setcontenttype) &mdash; _Method in class_ [`View`](Piwik/View.md)
- [`setXFrameOptions()`](Piwik/View.md#setxframeoptions) &mdash; _Method in class_ [`View`](Piwik/View.md)
- [`singleReport()`](Piwik/View.md#singlereport) &mdash; _Method in class_ [`View`](Piwik/View.md)
- [`$show_visualization_only`](Piwik/ViewDataTable/Config.md#$show_visualization_only) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$show_goals`](Piwik/ViewDataTable/Config.md#$show_goals) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$show_exclude_low_population`](Piwik/ViewDataTable/Config.md#$show_exclude_low_population) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$show_flatten_table`](Piwik/ViewDataTable/Config.md#$show_flatten_table) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$show_table`](Piwik/ViewDataTable/Config.md#$show_table) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$show_table_all_columns`](Piwik/ViewDataTable/Config.md#$show_table_all_columns) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$show_footer`](Piwik/ViewDataTable/Config.md#$show_footer) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$show_footer_icons`](Piwik/ViewDataTable/Config.md#$show_footer_icons) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$show_all_views_icons`](Piwik/ViewDataTable/Config.md#$show_all_views_icons) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$show_active_view_icon`](Piwik/ViewDataTable/Config.md#$show_active_view_icon) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$show_related_reports`](Piwik/ViewDataTable/Config.md#$show_related_reports) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$show_limit_control`](Piwik/ViewDataTable/Config.md#$show_limit_control) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$show_search`](Piwik/ViewDataTable/Config.md#$show_search) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$show_bar_chart`](Piwik/ViewDataTable/Config.md#$show_bar_chart) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$show_pie_chart`](Piwik/ViewDataTable/Config.md#$show_pie_chart) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$show_tag_cloud`](Piwik/ViewDataTable/Config.md#$show_tag_cloud) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$show_export_as_rss_feed`](Piwik/ViewDataTable/Config.md#$show_export_as_rss_feed) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$show_ecommerce`](Piwik/ViewDataTable/Config.md#$show_ecommerce) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$show_footer_message`](Piwik/ViewDataTable/Config.md#$show_footer_message) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$self_url`](Piwik/ViewDataTable/Config.md#$self_url) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$search_recursive`](Piwik/ViewDataTable/Config.md#$search_recursive) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$show_export_as_image_icon`](Piwik/ViewDataTable/Config.md#$show_export_as_image_icon) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$subtable_controller_action`](Piwik/ViewDataTable/Config.md#$subtable_controller_action) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$show_pagination_control`](Piwik/ViewDataTable/Config.md#$show_pagination_control) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$show_offset_information`](Piwik/ViewDataTable/Config.md#$show_offset_information) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`setDefaultSort()`](Piwik/ViewDataTable/RequestConfig.md#setdefaultsort) &mdash; _Method in class_ [`RequestConfig`](Piwik/ViewDataTable/RequestConfig.md)

## T

- [`Truncate`](Piwik/DataTable/Filter/Truncate.md) &mdash; _Class in namespace_ `Piwik\DataTable\Filter` 
- [`toString()`](Piwik/Date.md#tostring) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`today()`](Piwik/Date.md#today) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`$title`](Piwik/Notification.md#$title) &mdash; _Property in class_ [`Notification`](Piwik/Notification.md)
- [`$type`](Piwik/Notification.md#$type) &mdash; _Property in class_ [`Notification`](Piwik/Notification.md)
- [`toString()`](Piwik/Period.md#tostring) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`translate()`](Piwik/Piwik.md#translate) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`$type`](Piwik/Settings/Setting.md#$type) &mdash; _Property in class_ [`Setting`](Piwik/Settings/Setting.md)
- [`$transform`](Piwik/Settings/Setting.md#$transform) &mdash; _Property in class_ [`Setting`](Piwik/Settings/Setting.md)
- [`$title`](Piwik/Settings/Setting.md#$title) &mdash; _Property in class_ [`Setting`](Piwik/Settings/Setting.md)
- [`TaskScheduler`](Piwik/TaskScheduler.md) &mdash; _Class in namespace_ `Piwik` 
- [`$translations`](Piwik/ViewDataTable/Config.md#$translations) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$title`](Piwik/ViewDataTable/Config.md#$title) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)
- [`$tooltip_metadata_name`](Piwik/ViewDataTable/Config.md#$tooltip_metadata_name) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)

## U

- [`unprefixTable()`](Piwik/Common.md#unprefixtable) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`unsanitizeInputValues()`](Piwik/Common.md#unsanitizeinputvalues) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`unlockAllTables()`](Piwik/Db.md#unlockalltables) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`unlinkRecursive()`](Piwik/Filesystem.md#unlinkrecursive) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
- [`uninstall()`](Piwik/Plugin.md#uninstall) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`$uiControlType`](Piwik/Settings/Setting.md#$uicontroltype) &mdash; _Property in class_ [`Setting`](Piwik/Settings/Setting.md)
- [`$uiControlAttributes`](Piwik/Settings/Setting.md#$uicontrolattributes) &mdash; _Property in class_ [`Setting`](Piwik/Settings/Setting.md)
- [`UserSetting`](Piwik/Settings/UserSetting.md) &mdash; _Class in namespace_ `Piwik\Settings` 
- [`Url`](Piwik/Url.md) &mdash; _Class in namespace_ `Piwik` 
- [`UrlHelper`](Piwik/UrlHelper.md) &mdash; _Class in namespace_ `Piwik` 

## V

- [`verbose()`](Piwik/Log.md#verbose) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
- [`verifyNonce()`](Piwik/Nonce.md#verifynonce) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
- [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin) 
- [`Visualization`](Piwik/Plugin/Visualization.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin) 
- [`VisitorLog`](Piwik/Plugins/Live/VisitorLog.md) &mdash; _Class in namespace_ `Piwik\Plugins\Live` 
- [`$validate`](Piwik/Settings/Setting.md#$validate) &mdash; _Property in class_ [`Setting`](Piwik/Settings/Setting.md)
- [`Version`](Piwik/Version.md) &mdash; _Class in namespace_ `Piwik` 
- [`View`](Piwik/View.md) &mdash; _Class in namespace_ `Piwik` 

## W

- [`walkPath()`](Piwik/DataTable.md#walkpath) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`warning()`](Piwik/Log.md#warning) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
- [`Weekly`](Piwik/ScheduledTime/Weekly.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime) 
- [`WidgetsList`](Piwik/WidgetsList.md) &mdash; _Class in namespace_ `Piwik` 

## Y

- [`yesterday()`](Piwik/Date.md#yesterday) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`yesterdaySameTime()`](Piwik/Date.md#yesterdaysametime) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`$y_axis_unit`](Piwik/ViewDataTable/Config.md#$y_axis_unit) &mdash; _Property in class_ [`Config`](Piwik/ViewDataTable/Config.md)

## _

- [`__construct()`](Piwik/API/Request.md#__construct) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
- [`__get()`](Piwik/Config.md#__get) &mdash; _Method in class_ [`Config`](Piwik/Config.md)
- [`__set()`](Piwik/Config.md#__set) &mdash; _Method in class_ [`Config`](Piwik/Config.md)
- [`__construct()`](Piwik/DataTable.md#__construct) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`__destruct()`](Piwik/DataTable.md#__destruct) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`__sleep()`](Piwik/DataTable.md#__sleep) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`__toString()`](Piwik/DataTable.md#__tostring) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`__construct()`](Piwik/DataTable/BaseFilter.md#__construct) &mdash; _Method in class_ [`BaseFilter`](Piwik/DataTable/BaseFilter.md)
- [`__construct()`](Piwik/DataTable/Filter/AddColumnsProcessedMetrics.md#__construct) &mdash; _Method in class_ [`AddColumnsProcessedMetrics`](Piwik/DataTable/Filter/AddColumnsProcessedMetrics.md)
- [`__construct()`](Piwik/DataTable/Filter/AddColumnsProcessedMetricsGoal.md#__construct) &mdash; _Method in class_ [`AddColumnsProcessedMetricsGoal`](Piwik/DataTable/Filter/AddColumnsProcessedMetricsGoal.md)
- [`__construct()`](Piwik/DataTable/Filter/AddSummaryRow.md#__construct) &mdash; _Method in class_ [`AddSummaryRow`](Piwik/DataTable/Filter/AddSummaryRow.md)
- [`__construct()`](Piwik/DataTable/Filter/BeautifyRangeLabels.md#__construct) &mdash; _Method in class_ [`BeautifyRangeLabels`](Piwik/DataTable/Filter/BeautifyRangeLabels.md)
- [`__construct()`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md#__construct) &mdash; _Method in class_ [`BeautifyTimeRangeLabels`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md)
- [`__construct()`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md#__construct) &mdash; _Method in class_ [`CalculateEvolutionFilter`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md)
- [`__construct()`](Piwik/DataTable/Filter/ColumnCallbackAddColumn.md#__construct) &mdash; _Method in class_ [`ColumnCallbackAddColumn`](Piwik/DataTable/Filter/ColumnCallbackAddColumn.md)
- [`__construct()`](Piwik/DataTable/Filter/ColumnCallbackAddColumnQuotient.md#__construct) &mdash; _Method in class_ [`ColumnCallbackAddColumnQuotient`](Piwik/DataTable/Filter/ColumnCallbackAddColumnQuotient.md)
- [`__construct()`](Piwik/DataTable/Filter/ColumnCallbackAddMetadata.md#__construct) &mdash; _Method in class_ [`ColumnCallbackAddMetadata`](Piwik/DataTable/Filter/ColumnCallbackAddMetadata.md)
- [`__construct()`](Piwik/DataTable/Filter/ColumnCallbackDeleteRow.md#__construct) &mdash; _Method in class_ [`ColumnCallbackDeleteRow`](Piwik/DataTable/Filter/ColumnCallbackDeleteRow.md)
- [`__construct()`](Piwik/DataTable/Filter/ColumnDelete.md#__construct) &mdash; _Method in class_ [`ColumnDelete`](Piwik/DataTable/Filter/ColumnDelete.md)
- [`__construct()`](Piwik/DataTable/Filter/ExcludeLowPopulation.md#__construct) &mdash; _Method in class_ [`ExcludeLowPopulation`](Piwik/DataTable/Filter/ExcludeLowPopulation.md)
- [`__construct()`](Piwik/DataTable/Filter/GroupBy.md#__construct) &mdash; _Method in class_ [`GroupBy`](Piwik/DataTable/Filter/GroupBy.md)
- [`__construct()`](Piwik/DataTable/Filter/Limit.md#__construct) &mdash; _Method in class_ [`Limit`](Piwik/DataTable/Filter/Limit.md)
- [`__construct()`](Piwik/DataTable/Filter/MetadataCallbackAddMetadata.md#__construct) &mdash; _Method in class_ [`MetadataCallbackAddMetadata`](Piwik/DataTable/Filter/MetadataCallbackAddMetadata.md)
- [`__construct()`](Piwik/DataTable/Filter/MetadataCallbackReplace.md#__construct) &mdash; _Method in class_ [`MetadataCallbackReplace`](Piwik/DataTable/Filter/MetadataCallbackReplace.md)
- [`__construct()`](Piwik/DataTable/Filter/Pattern.md#__construct) &mdash; _Method in class_ [`Pattern`](Piwik/DataTable/Filter/Pattern.md)
- [`__construct()`](Piwik/DataTable/Filter/PatternRecursive.md#__construct) &mdash; _Method in class_ [`PatternRecursive`](Piwik/DataTable/Filter/PatternRecursive.md)
- [`__construct()`](Piwik/DataTable/Filter/ReplaceColumnNames.md#__construct) &mdash; _Method in class_ [`ReplaceColumnNames`](Piwik/DataTable/Filter/ReplaceColumnNames.md)
- [`__construct()`](Piwik/DataTable/Filter/ReplaceSummaryRowLabel.md#__construct) &mdash; _Method in class_ [`ReplaceSummaryRowLabel`](Piwik/DataTable/Filter/ReplaceSummaryRowLabel.md)
- [`__construct()`](Piwik/DataTable/Filter/Sort.md#__construct) &mdash; _Method in class_ [`Sort`](Piwik/DataTable/Filter/Sort.md)
- [`__construct()`](Piwik/DataTable/Filter/Truncate.md#__construct) &mdash; _Method in class_ [`Truncate`](Piwik/DataTable/Filter/Truncate.md)
- [`__toString()`](Piwik/DataTable/Map.md#__tostring) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`__construct()`](Piwik/DataTable/Row.md#__construct) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`__toString()`](Piwik/DataTable/Row.md#__tostring) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`__toString()`](Piwik/Date.md#__tostring) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`__construct()`](Piwik/Mail.md#__construct) &mdash; _Method in class_ [`Mail`](Piwik/Mail.md)
- [`__construct()`](Piwik/Notification.md#__construct) &mdash; _Method in class_ [`Notification`](Piwik/Notification.md)
- [`__toString()`](Piwik/Period.md#__tostring) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`__construct()`](Piwik/Period/Range.md#__construct) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
- [`__construct()`](Piwik/Plugin.md#__construct) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`__construct()`](Piwik/Plugin/Archiver.md#__construct) &mdash; _Method in class_ [`Archiver`](Piwik/Plugin/Archiver.md)
- [`__construct()`](Piwik/Plugin/Controller.md#__construct) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`__construct()`](Piwik/Plugin/Settings.md#__construct) &mdash; _Method in class_ [`Settings`](Piwik/Plugin/Settings.md)
- [`__construct()`](Piwik/Plugin/ViewDataTable.md#__construct) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`__construct()`](Piwik/RankingQuery.md#__construct) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
- [`__construct()`](Piwik/ScheduledTask.md#__construct) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`__construct()`](Piwik/Segment.md#__construct) &mdash; _Method in class_ [`Segment`](Piwik/Segment.md)
- [`__construct()`](Piwik/Settings/Setting.md#__construct) &mdash; _Method in class_ [`Setting`](Piwik/Settings/Setting.md)
- [`__construct()`](Piwik/Settings/SystemSetting.md#__construct) &mdash; _Method in class_ [`SystemSetting`](Piwik/Settings/SystemSetting.md)
- [`__construct()`](Piwik/Settings/UserSetting.md#__construct) &mdash; _Method in class_ [`UserSetting`](Piwik/Settings/UserSetting.md)
- [`__construct()`](Piwik/Site.md#__construct) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`__toString()`](Piwik/Site.md#__tostring) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`__construct()`](Piwik/View.md#__construct) &mdash; _Method in class_ [`View`](Piwik/View.md)
- [`__set()`](Piwik/View.md#__set) &mdash; _Method in class_ [`View`](Piwik/View.md)
- [`__get()`](Piwik/View.md#__get) &mdash; _Method in class_ [`View`](Piwik/View.md)
- [`__construct()`](Piwik/ViewDataTable/Config.md#__construct) &mdash; _Method in class_ [`Config`](Piwik/ViewDataTable/Config.md)
